--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
     </div>
     
     <footer>
-        <p>VOID ENGINE &copy; 2023. Все права защищены.</p>
+        <p>VOID ENGINE &copy; 2025.</p>
         <p>Только для образовательных целей.</p>
     </footer>
     
