--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trojan Cheat - Премиум читы</title>
+    <title>Void Engine  - Премиум чит</title>
     <style>
         * {
             margin: 0;
@@ -391,7 +391,7 @@
         <!-- Страница 1: Главная -->
         <div class="page">
             <div class="content">
-                <h1>Trojan Cheat</h1>
+                <h1>Void Engine</h1>
                 
                 <div class="card">
                     <h2>Премиум чит для PUBG</h2>
